--- a/Source/index2.html
+++ b/Source/index2.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content"width=device-width, initial-scale=1">
     <title>Exemplo</title>
 </head>
-<body>
-    <h1
-    style="color:DarkRed;"
-    id="metadata">Categorias</h1>
+<body style="background-color:Black; color:White;">
+    <h1 id="metadata">Categorias</h1>
     <nav>
     </nav>
     <section>
