--- a/Source/index2.html
+++ b/Source/index2.html
@@ -45,14 +45,13 @@
                         Regra: Se o elemento permite inserir qualquer elemento ele é dessa categoria.
                         </p>
                             <ul>
-                                <li>Base</li>
-                                <li>Command</li>
-                                <li>Link</li>
-                                <li>Meta</li>
-                                <li>Noscript</li>
-                                <li>Script</li>
-                                <li>Style</li>
-                                <li>Title</li>
+                                <li>a</li>
+                                <li>abbr</li>
+                                <li>adress</li>
+                                <li>area (se for descendente de um elemento mapa)</li>
+                                <li>article</li>
+                                <li>aside</li>
+                                <li>entre outros ;D</li>
                             </ul>
                 </header>
             </article>
