--- a/Source/index2.html
+++ b/Source/index2.html
@@ -59,21 +59,14 @@
     <section>
             <article>
                 <header>
-                        <h2 id="metadata">Metadata Content <a href="#top">top &uarr;</a>
+                        <h2 id="sectioning">Sectioning<a href="#top">top &uarr;</a>
                         </h2>
-                        <p>Conteúdo anterior criando a apresentação,
-                                criando uma relação com o documento
-                                e seu conteúdo com outros documentos
-                                que distribuem informação por outros meios</p>
+                        <p>Agrupam grupos de textos no documento</p>
                             <ul>
-                                <li>Base</li>
-                                <li>Command</li>
-                                <li>Link</li>
-                                <li>Meta</li>
-                                <li>Noscript</li>
-                                <li>Script</li>
-                                <li>Style</li>
-                                <li>Title</li>
+                                <li>article</li>
+                                <li>asside</li>
+                                <li>nav</li>
+                                <li>section</li>
                             </ul>
                 </header>
             </article>
