--- a/Source/index2.html
+++ b/Source/index2.html
@@ -71,5 +71,18 @@
                 </header>
             </article>
     </section>
+    <section>
+        <article>
+            <header>
+                    <h2 id="heading">Heading Content<a href="#top">top &uarr;</a>
+                    </h2>
+                    <p>Define uma seção de cabeçalhos, podendo estar contidos dentro de um elemento da categoria Sectioning</p>
+                        <ul>
+                            <li>h1 - h6</li>
+                            <li>hgroup</li>
+                        </ul>
+            </header>
+        </article>
+</section>
 </body>
 </html>
