--- a/Source/index2.html
+++ b/Source/index2.html
@@ -8,7 +8,7 @@
     <title>Exemplo</title>
 </head>
 <body style="background-color:Black; color:White;">
-    <h1 id="metadata">Categorias</h1>
+    <h1 id="metadata">&#9824; Categorias &#9824;</h1>
     <nav>
     </nav>
     <section>
@@ -83,6 +83,78 @@
                         </ul>
             </header>
         </article>
-</section>
+    </section>
+    <section>
+             <article>
+        <header>
+                <h2 id="phrasing">Phrasing Content<a href="#top">top &uarr;</a>
+                </h2>
+                <p>&#9829; Elementos que marcam texto &#9829;</p>
+                    <ul>
+                        <li>audio</li>
+                        <li>b</li>
+                        <li>bdo</li>
+                        <li>br</li>
+                        <li>button</li>
+                        <li>canvas</li>
+                        <li>del (se ele contiver um elemento da categoria phrasing</li>
+                        <li>kbd</li>
+                        <li>entre outros ;D &#9829;</li>
+                    </ul>
+        </header>
+         </article>
+    </section>
+    <section>
+        <article>
+        <header>
+           <h2 id="phrasing">Phrasing Content<a href="#top">top &uarr;</a>
+           </h2>
+           <p>&#9829; Importam outra fonte de informação &#9829;</p>
+               <ul>
+                   <li>audio</li>
+                   <li>canvas</li>
+                   <li>emped</li>
+                   <li>iframe</li>
+                   <li>img</li>
+                   <li>math</li>
+                   <li>object</li>
+                   <li>svg</li>
+                   <li>video</li>
+               </ul>
+         </header>
+         </article>
+    </section>
+    <section>
+         <article>
+        <header>
+       <h2 id="interactive">Interactive Content<a href="#top">top &uarr;</a>
+       </h2>
+       <p>&#9829; Tudo que o usuário pode merda &#9829;
+           <br> Nota: alguns elementos no HTML podem ser ativados por um comportamento.
+           Isso significa que o usuário pode ativá-lo de alguma forma. O início da sequência de eventos depende
+           do mecanismo de ativação e normalmente culminam em um evento de click seguido pelo evento DOMActivate.
+           O user-agent permite que o usuário ative manualmente o elemento que tem este comportamento utilizando
+           um teclado, mouse, comando de voz etc &#9829;
+       </p>
+           <ul>
+               <li>a</li>
+               <li>audio (se o atributo <code>control</code> for utilizado</li>
+               <li>button</li>
+               <li>details</li>
+               <li>embed</li>
+               <li>iframe</li>
+               <li>img (se o atributo <code>usemap</code> for utilizado</li>
+               <li>imput (se o atribudo <code>type</code> não tiver o valor <code>hidden</code></li>
+               <li>keygen</li>
+               <li>label</li>
+               <li>menu (se o valor atribuido <code>type</code> tiver o valor <code>toolbar</code></li>
+               <li>object (se o atributo <code>usemap</code> for utilizado</li>
+               <li>select</li>
+               <li>textarea</li>
+               <li>video (se o atributo <code> control</code> for utilizado</li>
+           </ul>
+        </header>
+        </article>
+    </section>
 </body>
 </html>
