--- a/Source/index2.html
+++ b/Source/index2.html
@@ -10,6 +10,15 @@
 <body style="background-color:Black; color:White;">
     <h1 id="metadata">&#9824; Categorias &#9824;</h1>
     <nav>
+        <ul>
+            <li><a href="metadata">Metadata Content</a></li>
+            <li><a href="flow">Flow</a></li>
+            <li><a href="sectioning">Sectioning</a></li>
+            <li><a href="heading">Heading</a></li>
+            <li><a href="phrasing">Phrasing</a></li>
+            <li><a href="embedded">Embedded</a></li>
+            <li><a href="interactive">Interactive</a></li>
+        </ul>
     </nav>
     <section>
             <article>
@@ -33,7 +42,7 @@
                             </ul>
                 </header>
             </article>
-    </section>
+             </section>
     <section>
             <article>
                 <header>
@@ -85,7 +94,7 @@
         </article>
     </section>
     <section>
-             <article>
+        <article>
         <header>
                 <h2 id="phrasing">Phrasing Content<a href="#top">top &uarr;</a>
                 </h2>
@@ -107,7 +116,7 @@
     <section>
         <article>
         <header>
-           <h2 id="phrasing">Phrasing Content<a href="#top">top &uarr;</a>
+           <h2 id="Embedded">Embedded Content<a href="#top">top &uarr;</a>
            </h2>
            <p>&#9829; Importam outra fonte de informação &#9829;</p>
                <ul>
@@ -129,7 +138,7 @@
         <header>
        <h2 id="interactive">Interactive Content<a href="#top">top &uarr;</a>
        </h2>
-       <p>&#9829; Tudo que o usuário pode merda &#9829;
+       <p>&#9829; Tudo que o usuário pode clicar e muito provavelmente fazer merda &#9829;
            <br> Nota: alguns elementos no HTML podem ser ativados por um comportamento.
            Isso significa que o usuário pode ativá-lo de alguma forma. O início da sequência de eventos depende
            do mecanismo de ativação e normalmente culminam em um evento de click seguido pelo evento DOMActivate.
